--- a/design/style.css
+++ b/design/style.css
@@ -3,11 +3,11 @@
     font-size: 30px;
 }
 body {
-    background-color: cornsilk
+    background-color: cornsilk;
     width: 565px;
     margin: auto;
-    padding: 12px
-    box-shadow: 3px 3px 3px black;
+    padding: 12px;
+    box-shadow: 3px 3px 7px black;
 }
 
 h1 {
