--- a/design/style.css
+++ b/design/style.css
@@ -4,6 +4,11 @@
 }
 body {
     background-color: cornsilk;
+
+}
+
+main {
+    background-color: azure;
     width: 565px;
     margin: auto;
     padding: 12px;
@@ -13,5 +18,4 @@ body {
 h1 {
     font-size: 2em;
     color: rgb(61, 57, 57);
-    text-shadow: 2px 2px 2px black;
 }
