--- a/style.css
+++ b/style.css
@@ -18,21 +18,11 @@
 }
 
 .efeito-1 {
-    background-color: #28348a;
+    background: #28348a;
 }
 
-.efeito-1:before {
-    content: ''; 
-    position: absolute;
-    top: 0px;
-    left: 0px;
-    width: 0px;
-    height: 45px;
-    background: rgba(255,255,255,0.3);
-    border-radius: 10px;
-    transition: all 2s ease;
-}
-
-efeito-1:hover:before {
-    width: 100%;
+.efeito-1:hover {
+    background: rgba(0,0,0,0);
+    color: #28348a;
+    box-shadow: inset 0 0 0 3px #28348a;    
 }
