--- a/style.css
+++ b/style.css
@@ -18,17 +18,17 @@
 }
 
 .efeito-1 {
-    background: #28348a;
+    background: #008080;
 }
 
 .efeito-1:hover {
     background: rgba(0,0,0,0);
-    color: #28348a;
-    box-shadow: inset 0 0 0 3px #28348a;    
+    color: #008080;
+    box-shadow: inset 0 0 0 3px #008080;    
 }
 
 .efeito-2 {
-    background: #28348a;
+    background: #008080;
     transform-style: preserve-3d;
 }
 
@@ -38,7 +38,7 @@
     width: 100%;
     padding: 5px;
     position: absolute;
-    background: #28348a;
+    background: #008080;
     border-radius: 10px;
     box-sizing: border-box;
     content: 'Conheça um pouco sobre mim!';
