--- a/style-font.css
+++ b/style-font.css
@@ -1,13 +1,13 @@
 @charset "UTF-8";
 
 body {
-    background-color: azure;
+    background-image: linear-gradient(to top, rgb(223, 253, 253), rgb(220, 255, 255)); 
     font-family: Arial, Helvetica, sans-serif;
     font-size: 20px;
 }
 
 h1 {
-    color: rgba(6, 110, 141, 0.966);
+    color: rgba(31, 122, 122, 0.966);
     text-align: center;
 }
 
